fix(GpuServerServiceTest): java version issue로 List.of -> Arrays.asList